pag inicial revisar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link" href="#">INICIO</a>
+          <a class="nav-link" href="index.html">INICIO</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">SERVICIOS</a>
@@ -58,10 +58,25 @@
 
   </section>
 
-  <main id="servicios" class="navbar bg-primary" data-bs-theme="dark">
+  <section id="nosotros">
+    <h2 class="bg-primary" data-bs-theme="dark"> 
+      NOSOTROS
+    </h2>
+      <p>
+      En ACEE SAS queremos que su Compañía crezca exponencialmente. 
+      Somos una empresa con más de 10 años de experiencia en asesorías 
+      contables personalizadas, outsourcing contable, outsourcing de 
+      nómina y demás servicios que permitirán que los procesos internos 
+      de su Compañía se optimicen con respecto a sus objetivos.
+      </p>
+  </section>
+
+  <main id="servicios" >
 
     <div id="nuestros_servicios">
-      <h2>NUESTROS SERVICIOS</h2>
+      <h2 class="bg-primary" data-bs-theme="dark">
+        NUESTROS SERVICIOS
+      </h2>
     </div>
 
     <section id="opciones_servicio">
@@ -131,21 +146,8 @@
 
   </main>
 
-  <section id="nosotros">
-    <h2> 
-      NOSOTROS
-    </h2>
-      <p>
-      En ACEE SAS queremos que su Compañía crezca exponencialmente. 
-      Somos una empresa con más de 10 años de experiencia en asesorías 
-      contables personalizadas, outsourcing contable, outsourcing de 
-      nómina y demás servicios que permitirán que los procesos internos 
-      de su Compañía se optimicen con respecto a sus objetivos.
-      </p>
-  </section>
-
-  <section id="escogenos" class="bg-primary" data-bs-theme="dark"">
-    <h2>
+  <section id="escogenos">
+    <h2 class="bg-primary" data-bs-theme="dark">
       ¿POR QUÉ ESCOGER ACEE SAS?
     </h2>
     <p>
@@ -159,7 +161,16 @@
     </p>
   </section>
    
-  <footer>
+  <footer class="bg-primary" data-bs-theme="dark">
+
+    <div>
+      <p>Dirección:</p>
+      <p>PBX:(601) </p>
+    </div>
+
+    <div>
+      <p>@Copyright 2023 | Leonardo Combita | Todos los derechos reservados</p>
+    </div>
       
   </footer> 
   
